<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/loginHintText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/primary_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginInputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/phone_or_email"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        android:defaultFocusHighlightEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/passwordInputContainer"
        app:layout_constraintTop_toBottomOf="@id/loginHintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInput"
            android:defaultFocusHighlightEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:defaultFocusHighlightEnabled="false"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        app:layout_constraintBottom_toTopOf="@id/authCodeInputContainer"
        app:layout_constraintTop_toBottomOf="@id/loginInputContainer"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:defaultFocusHighlightEnabled="false"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authCodeInputContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_code"
        android:visibility="gone"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/passwordInputContainer"
        app:layout_constraintTop_toBottomOf="@id/passwordInputContainer"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authCodeInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authCodeInputContainer" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Base.Widget.AppCompat.ProgressBar.FlacoProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toTopOf="@id/loginButton" />

    <com.flaco_music.utils.SnackbarView
        android:id="@+id/snackbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>