<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|snap"
                app:titleEnabled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/avatarImage"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/artist_placeholder_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/artist_img_gradient"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/optionsImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="16dp"
                        android:foreground="@drawable/rounded_ripple"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_more_vert_24"
                        app:layout_constraintBottom_toBottomOf="@id/title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/title"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/title"
                        style="@style/Base.Widget.AppCompat.TextView.PageTitle"
                        android:layout_marginTop="41dp"
                        android:layout_marginBottom="16dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/numberOfTracksText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/artist_name" />

                    <TextView
                        android:id="@+id/numberOfTracksText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@id/playlistsRecycler"
                        app:layout_constraintStart_toStartOf="@id/title"
                        tools:text="@string/my_music" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/playlistsRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="210dp"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:listitem="@layout/item_playlist" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tracksContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracksRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_track" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:visibility="gone">

        <ProgressBar style="@style/Base.Widget.AppCompat.ProgressBar.FlacoProgressBar" />

    </FrameLayout>

    <TextView
        android:id="@+id/artistNotFoundText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:text="@string/artist_not_found"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>